// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`presentational snapshots QuestionDetailError — with retry 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
          "padding": 20,
        },
        {
          "backgroundColor": "#000000",
        },
      ]
    }
  >
    <Text
      style={
        [
          {
            "fontFamily": "Roboto_500Medium",
            "fontSize": 13,
            "marginBottom": 12,
            "textAlign": "center",
          },
          {
            "color": "#FF3B30",
          },
        ]
      }
    >
      Question not found
    </Text>
    <View
      style={
        {
          "flexDirection": "row",
          "gap": 12,
          "marginTop": 8,
        }
      }
    >
      <View
        accessibilityLabel="Retry"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": false,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#4D4DFF",
            "borderColor": undefined,
            "borderRadius": 12,
            "borderWidth": 0,
            "flexDirection": "row",
            "justifyContent": "center",
            "minHeight": 48,
            "opacity": 1,
            "paddingHorizontal": 24,
            "paddingVertical": 16,
          }
        }
      >
        <View
          style={
            {
              "marginRight": 8,
            }
          }
        >
          <Icon
            color="#FFFFFF"
            size={16}
            strokeWidth={2}
          />
        </View>
        <Text
          style={
            [
              {
                "color": "#FFFFFF",
                "fontFamily": "Roboto_700Bold",
                "fontSize": 16,
                "textAlign": "center",
              },
              undefined,
            ]
          }
        >
          Retry
        </Text>
      </View>
      <View
        accessibilityLabel="Go back"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": false,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#2A2A2A",
            "borderColor": undefined,
            "borderRadius": 12,
            "borderWidth": 0,
            "flexDirection": "row",
            "justifyContent": "center",
            "minHeight": 48,
            "opacity": 1,
            "paddingHorizontal": 24,
            "paddingVertical": 16,
          }
        }
      >
        <Text
          style={
            [
              {
                "color": "#FFFFFF",
                "fontFamily": "Roboto_700Bold",
                "fontSize": 16,
                "textAlign": "center",
              },
              undefined,
            ]
          }
        >
          Go back
        </Text>
      </View>
    </View>
  </View>
</RNCSafeAreaProvider>
`;

exports[`presentational snapshots QuestionDetailHeader 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "borderBottomWidth": 1,
          "flexDirection": "row",
          "paddingBottom": 12,
          "paddingHorizontal": 20,
        },
        {
          "backgroundColor": "#1A1A1A",
          "borderBottomColor": "#2A2A2A",
          "paddingTop": 59,
        },
      ]
    }
  >
    <View
      accessibilityHint="Returns to the previous screen"
      accessibilityLabel="Go back"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      hitSlop={8}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "alignItems": "center",
            "borderRadius": 9999,
            "height": 48,
            "justifyContent": "center",
            "width": 48,
          },
          {
            "backgroundColor": "#2A2A2A",
          },
        ]
      }
    >
      <Icon
        color="#FFFFFF"
        size={16}
        strokeWidth={1.5}
      />
    </View>
    <View
      style={
        {
          "flex": 1,
          "gap": 4,
          "marginHorizontal": 12,
        }
      }
    >
      <Text
        style={
          [
            {
              "fontFamily": "Roboto_700Bold",
              "fontSize": 16,
            },
            {
              "color": "#FFFFFF",
            },
          ]
        }
      >
        Discussion
      </Text>
      <Text
        numberOfLines={1}
        style={
          [
            {
              "fontFamily": "Roboto_500Medium",
              "fontSize": 12,
            },
            {
              "color": "#6B6B6B",
            },
          ]
        }
      >
        A question?
      </Text>
    </View>
  </View>
</RNCSafeAreaProvider>
`;

exports[`presentational snapshots QuestionHeroCard — with reward 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    style={
      [
        {
          "borderRadius": 16,
          "borderWidth": 1,
          "gap": 12,
          "marginBottom": 20,
          "padding": 20,
        },
        {
          "backgroundColor": "#1A1A1A",
          "borderColor": "#2A2A2A",
        },
      ]
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "borderRadius": 6,
              "flexDirection": "row",
              "gap": 4,
              "paddingHorizontal": 8,
              "paddingVertical": 4,
            },
            {
              "backgroundColor": "rgba(77, 77, 255, 0.12)",
            },
          ]
        }
      >
        <Icon
          color="#4D4DFF"
          size={14}
          strokeWidth={1.5}
        />
        <Text
          style={
            [
              {
                "fontFamily": "Roboto_500Medium",
                "fontSize": 10,
              },
              {
                "color": "#4D4DFF",
              },
            ]
          }
        >
          Technology
        </Text>
      </View>
      <Text
        style={
          [
            {
              "fontFamily": "Roboto_500Medium",
              "fontSize": 12,
            },
            {
              "color": "#6B6B6B",
            },
          ]
        }
      >
        Jun 1, 2026
      </Text>
    </View>
    <Text
      style={
        [
          {
            "fontFamily": "Roboto_700Bold",
            "fontSize": 16,
            "lineHeight": 22.4,
          },
          {
            "color": "#FFFFFF",
          },
        ]
      }
    >
      How do I write UI regression tests for a React Native screen?
    </Text>
    <View
      style={
        [
          {
            "alignItems": "center",
            "borderRadius": 8,
            "flexDirection": "row",
            "gap": 8,
            "paddingHorizontal": 12,
            "paddingVertical": 8,
          },
          {
            "backgroundColor": "rgba(255, 171, 0, 0.08)",
          },
        ]
      }
    >
      <Icon
        color="#FFAB00"
        size={16}
        strokeWidth={2}
      />
      <Text
        style={
          [
            {
              "fontFamily": "Roboto_700Bold",
              "fontSize": 12,
            },
            {
              "color": "#FFAB00",
            },
          ]
        }
      >
        Earn 
        UGX 500
      </Text>
    </View>
    <View
      style={
        {
          "flexDirection": "row",
          "gap": 12,
        }
      }
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "borderRadius": 8,
              "flexDirection": "row",
              "gap": 4,
              "padding": 8,
            },
            {
              "backgroundColor": "#2A2A2A",
            },
          ]
        }
      >
        <Icon
          color="#4D4DFF"
          size={14}
          strokeWidth={1.5}
        />
        <Text
          style={
            [
              {
                "fontFamily": "Roboto_500Medium",
                "fontSize": 12,
              },
              {
                "color": "#6B6B6B",
              },
            ]
          }
        >
          2
           answers
        </Text>
      </View>
    </View>
  </View>
</RNCSafeAreaProvider>
`;

exports[`presentational snapshots QuestionHeroCard — without reward 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    style={
      [
        {
          "borderRadius": 16,
          "borderWidth": 1,
          "gap": 12,
          "marginBottom": 20,
          "padding": 20,
        },
        {
          "backgroundColor": "#1A1A1A",
          "borderColor": "#2A2A2A",
        },
      ]
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "borderRadius": 6,
              "flexDirection": "row",
              "gap": 4,
              "paddingHorizontal": 8,
              "paddingVertical": 4,
            },
            {
              "backgroundColor": "rgba(77, 77, 255, 0.12)",
            },
          ]
        }
      >
        <Icon
          color="#4D4DFF"
          size={14}
          strokeWidth={1.5}
        />
        <Text
          style={
            [
              {
                "fontFamily": "Roboto_500Medium",
                "fontSize": 10,
              },
              {
                "color": "#4D4DFF",
              },
            ]
          }
        >
          Technology
        </Text>
      </View>
      <Text
        style={
          [
            {
              "fontFamily": "Roboto_500Medium",
              "fontSize": 12,
            },
            {
              "color": "#6B6B6B",
            },
          ]
        }
      >
        Jun 1, 2026
      </Text>
    </View>
    <Text
      style={
        [
          {
            "fontFamily": "Roboto_700Bold",
            "fontSize": 16,
            "lineHeight": 22.4,
          },
          {
            "color": "#FFFFFF",
          },
        ]
      }
    >
      How do I write UI regression tests for a React Native screen?
    </Text>
    <View
      style={
        {
          "flexDirection": "row",
          "gap": 12,
        }
      }
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "borderRadius": 8,
              "flexDirection": "row",
              "gap": 4,
              "padding": 8,
            },
            {
              "backgroundColor": "#2A2A2A",
            },
          ]
        }
      >
        <Icon
          color="#4D4DFF"
          size={14}
          strokeWidth={1.5}
        />
        <Text
          style={
            [
              {
                "fontFamily": "Roboto_500Medium",
                "fontSize": 12,
              },
              {
                "color": "#6B6B6B",
              },
            ]
          }
        >
          2
           answers
        </Text>
      </View>
    </View>
  </View>
</RNCSafeAreaProvider>
`;

exports[`presentational snapshots ResponseCard — accepted 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    accessibilityLabel="Response by Ada Lovelace. 2 likes, 0 dislikes. Accepted answer"
    accessibilityRole="summary"
    style={
      [
        {
          "borderRadius": 8,
          "borderWidth": 1,
          "gap": 8,
          "marginBottom": 12,
          "padding": 12,
        },
        {
          "backgroundColor": "#1A1A1A",
          "borderColor": "#2A2A2A",
        },
      ]
    }
  >
    <View
      style={
        {
          "marginBottom": 4,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 8,
          }
        }
      >
        <View
          style={
            [
              {
                "alignItems": "center",
                "borderRadius": 9999,
                "height": 32,
                "justifyContent": "center",
                "width": 32,
              },
              {
                "backgroundColor": "rgba(77, 77, 255, 0.15)",
              },
            ]
          }
        >
          <Text
            style={
              [
                {
                  "fontFamily": "Roboto_700Bold",
                  "fontSize": 12,
                },
                {
                  "color": "#4D4DFF",
                },
              ]
            }
          >
            A
          </Text>
        </View>
        <View
          style={
            {
              "flex": 1,
            }
          }
        >
          <Text
            style={
              [
                {
                  "fontFamily": "Roboto_700Bold",
                  "fontSize": 14,
                },
                {
                  "color": "#FFFFFF",
                },
              ]
            }
          >
            Ada Lovelace
          </Text>
          <Text
            style={
              [
                {
                  "fontFamily": "Roboto_500Medium",
                  "fontSize": 10,
                },
                {
                  "color": "#6B6B6B",
                },
              ]
            }
          >
            Jun 1, 2026
          </Text>
        </View>
        <View
          style={
            [
              {
                "alignItems": "center",
                "borderRadius": 6,
                "flexDirection": "row",
                "gap": 4,
                "paddingHorizontal": 8,
                "paddingVertical": 2,
              },
              {
                "backgroundColor": "rgba(0, 200, 83, 0.12)",
              },
            ]
          }
        >
          <Icon
            color="#00C853"
            size={12}
            strokeWidth={2}
          />
          <Text
            style={
              [
                {
                  "fontFamily": "Roboto_500Medium",
                  "fontSize": 10,
                },
                {
                  "color": "#00C853",
                },
              ]
            }
          >
            Accepted
          </Text>
        </View>
      </View>
    </View>
    <Text
      style={
        [
          {
            "fontFamily": "Roboto_500Medium",
            "fontSize": 14,
            "lineHeight": 21,
          },
          {
            "color": "#FFFFFF",
          },
        ]
      }
    >
      Use RNTL with jest-expo.
    </Text>
  </View>
</RNCSafeAreaProvider>
`;

exports[`presentational snapshots ResponseCard — default 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    accessibilityLabel="Response by Ada Lovelace. 2 likes, 0 dislikes"
    accessibilityRole="summary"
    style={
      [
        {
          "borderRadius": 8,
          "borderWidth": 1,
          "gap": 8,
          "marginBottom": 12,
          "padding": 12,
        },
        {
          "backgroundColor": "#1A1A1A",
          "borderColor": "#2A2A2A",
        },
      ]
    }
  >
    <View
      style={
        {
          "marginBottom": 4,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 8,
          }
        }
      >
        <View
          style={
            [
              {
                "alignItems": "center",
                "borderRadius": 9999,
                "height": 32,
                "justifyContent": "center",
                "width": 32,
              },
              {
                "backgroundColor": "rgba(77, 77, 255, 0.15)",
              },
            ]
          }
        >
          <Text
            style={
              [
                {
                  "fontFamily": "Roboto_700Bold",
                  "fontSize": 12,
                },
                {
                  "color": "#4D4DFF",
                },
              ]
            }
          >
            A
          </Text>
        </View>
        <View
          style={
            {
              "flex": 1,
            }
          }
        >
          <Text
            style={
              [
                {
                  "fontFamily": "Roboto_700Bold",
                  "fontSize": 14,
                },
                {
                  "color": "#FFFFFF",
                },
              ]
            }
          >
            Ada Lovelace
          </Text>
          <Text
            style={
              [
                {
                  "fontFamily": "Roboto_500Medium",
                  "fontSize": 10,
                },
                {
                  "color": "#6B6B6B",
                },
              ]
            }
          >
            Jun 1, 2026
          </Text>
        </View>
      </View>
    </View>
    <Text
      style={
        [
          {
            "fontFamily": "Roboto_500Medium",
            "fontSize": 14,
            "lineHeight": 21,
          },
          {
            "color": "#FFFFFF",
          },
        ]
      }
    >
      Use RNTL with jest-expo.
    </Text>
    <View
      style={
        {
          "flexDirection": "row",
          "gap": 12,
          "marginTop": 4,
        }
      }
    >
      <View
        accessibilityLabel="Like. 2 likes"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        hitSlop={8}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 4,
            "minHeight": 48,
            "minWidth": 48,
          }
        }
      >
        <Icon
          color="#6B6B6B"
          size={16}
          strokeWidth={1.5}
        />
        <Text
          style={
            [
              {
                "fontFamily": "Roboto_500Medium",
                "fontSize": 12,
              },
              {
                "color": "#6B6B6B",
              },
            ]
          }
        >
          2
        </Text>
      </View>
      <View
        accessibilityLabel="Dislike. 0 dislikes"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        hitSlop={8}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 4,
            "minHeight": 48,
            "minWidth": 48,
          }
        }
      >
        <Icon
          color="#6B6B6B"
          size={16}
          strokeWidth={1.5}
        />
        <Text
          style={
            [
              {
                "fontFamily": "Roboto_500Medium",
                "fontSize": 12,
              },
              {
                "color": "#6B6B6B",
              },
            ]
          }
        >
          0
        </Text>
      </View>
    </View>
  </View>
</RNCSafeAreaProvider>
`;
